ajout des intitulés dans list

--- a/list.html
+++ b/list.html
@@ -37,8 +37,8 @@
     <span class="mdl-list__item-primary-content">
 
       <img class ="material-icons mdl-list__item-avatar" src= "img/iconmonstr-eye-3.svg">
-      <span>Aaron Paul</span>
-      <span class="mdl-list__item-sub-title">62 Episodes</span>
+      <span>Spectateur</span>
+      <span class="mdl-list__item-sub-title">Vous profitez du match</span>
     </span>
                     <span class="mdl-list__item-secondary-content">
       <a class="mdl-list__item-secondary-action" href="#"><label class="mdl-switch mdl-js-switch mdl-js-ripple-effect" for="switch-1">
@@ -50,8 +50,8 @@
                 <li class="mdl-list__item mdl-list__item--two-line">
     <span class="mdl-list__item-primary-content">
       <img class ="material-icons mdl-list__item-avatar" src= "img/iconmonstr-basketball-1.svg">
-      <span>Aaron Paul</span>
-      <span class="mdl-list__item-sub-title">62 Episodes</span>
+      <span>Scorer</span>
+      <span class="mdl-list__item-sub-title">Vous vous chargez du temps et des points</span>
     </span>
                     <span class="mdl-list__item-secondary-content">
       <a class="mdl-list__item-secondary-action" href="#"><label class="mdl-switch mdl-js-switch mdl-js-ripple-effect" for="switch-2">
@@ -63,8 +63,8 @@
                 <li class="mdl-list__item mdl-list__item--two-line mdl-list__item-imp">
     <span class="mdl-list__item-primary-content">
       <img class ="material-icons mdl-list__item-avatar" src= "img/ballon%20couronne.svg">
-      <span>Bob Odenkirk</span>
-      <span class="mdl-list__item-sub-title">62 Episodes</span>
+      <span>Scorer expert</span>
+      <span class="mdl-list__item-sub-title">Vous vous focalisez sur un joueur spécifique</span>
     </span>
                     <span class="mdl-list__item-secondary-content">
 
@@ -77,8 +77,8 @@
                 <li class="mdl-list__item mdl-list__item--two-line">
     <span class="mdl-list__item-primary-content">
       <img class ="material-icons mdl-list__item-avatar" src= "img/iconmonstr-microphone-7.svg">
-      <span>Bob Odenkirk</span>
-      <span class="mdl-list__item-sub-title">62 Episodes</span>
+      <span>Homme de terrain</span>
+      <span class="mdl-list__item-sub-title">Vous recueillez les témoignages du coach ou d'un joueur</span>
     </span>
                     <span class="mdl-list__item-secondary-content">
       <a class="mdl-list__item-secondary-action" href="#"><label class="mdl-switch mdl-js-switch mdl-js-ripple-effect" for="switch-4">
@@ -90,8 +90,8 @@
                 <li class="mdl-list__item mdl-list__item--two-line mdl-list__item-imp">
     <span class="mdl-list__item-primary-content">
       <img class ="material-icons mdl-list__item-avatar" src= "img/iconmonstr-photo-camera-4.svg">
-      <span>Bob Odenkirk</span>
-      <span class="mdl-list__item-sub-title">62 Episodes</span>
+      <span>Photographe</span>
+      <span class="mdl-list__item-sub-title">Vous illustrez le match avec vos clichés</span>
     </span>
                     <span class="mdl-list__item-secondary-content">
       <a class="mdl-list__item-secondary-action" href="#"><label class="mdl-switch mdl-js-switch mdl-js-ripple-effect" for="switch-5">
