--- a/list.html
+++ b/list.html
@@ -30,7 +30,7 @@
     <div>tototot</div>
 </header>
 <content>
-    <div class="overlay">
+    <div class="role-list">
         <div class="role">
             <ul class="demo-list-two mdl-list">
                 <li class="mdl-list__item mdl-list__item--two-line mdl-list__item-imp">
