structure html\/css

--- a/list.html
+++ b/list.html
@@ -62,7 +62,7 @@
                 </li>
                 <li class="mdl-list__item mdl-list__item--two-line mdl-list__item-imp">
     <span class="mdl-list__item-primary-content">
-      <img class ="material-icons mdl-list__item-avatar" src= "img/ballon%20couronne.svg">
+      <img class ="material-icons mdl-list__item-avatar" src= "img/ballon_couronne.svg">
       <span>Scorer expert</span>
       <span class="mdl-list__item-sub-title">Vous vous focalisez sur un joueur spécifique</span>
     </span>
