--- a/index.html
+++ b/index.html
@@ -129,7 +129,9 @@
 
     <div id="pendantMatch-overlay">
         <div class="pendantMatch-bandeau">
-            <div class="pendantMatch-bandeau-top"></div>
+            <div class="pendantMatch-bandeau-top">
+                <img class="pendantMatch-bandeau-top--image" src="img/HEADER.svg" alt="">
+            </div>
             <div class="pendantMatch-bandeau-score">
                 <span id="pendantMatch-bandeau-score--left">0</span>
                 <span>&nbsp;:&nbsp;</span>
@@ -156,10 +158,10 @@
         <div id="pendantMatch-actions">
             <div class="pendantMatch-actions-bigRow">
                 <div class="pendantMatch-actions-colonne">
-                    <div data-score="-1" id="score-left--0" class="pendantMatch-actions-boutons"><span class="pendantMatch-actions-valeur">-1</span></div>
-                    <div data-score="3" id="score-left--3" class="pendantMatch-actions-boutons"><span class="pendantMatch-actions-valeur">3</span></div>
-                    <div data-score="2" id="score-left--2" class="pendantMatch-actions-boutons"><span class="pendantMatch-actions-valeur">2</span></div>
-                    <div data-score="1" id="score-left--1" class="pendantMatch-actions-boutons"><span class="pendantMatch-actions-valeur">1</span></div>
+                    <div data-score="3" id="score-left--3" class="pendantMatch-actions-boutons pendantMatch-actions-boutons--left"><span class="pendantMatch-actions-valeur">3</span></div>
+                    <div data-score="2" id="score-left--2" class="pendantMatch-actions-boutons pendantMatch-actions-boutons--left"><span class="pendantMatch-actions-valeur">2</span></div>
+                    <div data-score="1" id="score-left--1" class="pendantMatch-actions-boutons pendantMatch-actions-boutons--left"><span class="pendantMatch-actions-valeur">1</span></div>
+                    <div data-score="-1" id="score-left--0" class="pendantMatch-actions-boutons pendantMatch-actions-boutons--left"><span class="pendantMatch-actions-valeur">-1</span></div>
                 </div>
                 <div class="pendantMatch-actions-colonne pendantMatch-actions-colonne--timer">
                     <div class="pendantMatch-actions-timer">
@@ -169,13 +171,13 @@
                     </div>
                 </div>
                 <div class="pendantMatch-actions-colonne">
-                    <div data-score="-1" id="score-right--0" class="pendantMatch-actions-boutons"><span class="pendantMatch-actions-valeur">-1</span></div>
-                    <div data-score="3" id="score-right--3" class="pendantMatch-actions-boutons"><span class="pendantMatch-actions-valeur">3</span></div>
-                    <div data-score="2" id="score-right--2" class="pendantMatch-actions-boutons"><span class="pendantMatch-actions-valeur">2</span></div>
-                    <div data-score="1" id="score-right--1" class="pendantMatch-actions-boutons"><span class="pendantMatch-actions-valeur">1</span></div>
+                    <div data-score="3" id="score-right--3" class="pendantMatch-actions-boutons pendantMatch-actions-boutons--right"><span class="pendantMatch-actions-valeur">3</span></div>
+                    <div data-score="2" id="score-right--2" class="pendantMatch-actions-boutons pendantMatch-actions-boutons--right"><span class="pendantMatch-actions-valeur">2</span></div>
+                    <div data-score="1" id="score-right--1" class="pendantMatch-actions-boutons pendantMatch-actions-boutons--right"><span class="pendantMatch-actions-valeur">1</span></div>
+                    <div data-score="-1" id="score-right--0" class="pendantMatch-actions-boutons pendantMatch-actions-boutons--right"><span class="pendantMatch-actions-valeur">1-</span></div>
                 </div>
             </div>
-            <div id="pendantMatch-actions-startButton"></div>
+            <div id="pendantMatch-actions-startButton"><span>START</span></div>
         </div>
     </div>
 
