--- a/list.html
+++ b/list.html
@@ -14,7 +14,7 @@
     <!-- Place favicon.ico in the root directory -->
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/lou.css">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.green-deep_orange.min.css" />
 </head>
 
