--- a/table.html
+++ b/table.html
@@ -49,37 +49,58 @@
         <tbody>
         <tr>
             <td>10</td>
+            <td>Blanchard</td>
+            <td>12</td>
             <td>25</td>
-            <td>$2.90</td>
-            <td>25</td>
-            <td>$2.90</td>
-            <td>25</td>
-            <td>$2.90</td>
-            <td>25</td>
-            <td>$2.90</td>
+            <td>3</td>
+            <td>7</td>
+            <td>2</td>
+            <td>4</td>
+            <td>12</td>
         </tr>
         <tr>
-            <td>Plywood (Birch)</td>
-            <td>50</td>
-            <td>$1.25</td>
+            <td>12</td>
+            <td>Pitlack</td>
+            <td>24</td>
             <td>25</td>
-            <td>$2.90</td>
-            <td>25</td>
-            <td>$2.90</td>
-            <td>25</td>
-            <td>$2.90</td>
+            <td>2</td>
+            <td>2</td>
+            <td>12</td>
+            <td>1</td>
+            <td>3</td>
         </tr>
         <tr>
-            <td>Laminate (Gold on Blue)</td>
-            <td>10</td>
-            <td>$2.35</td>
+            <td>5</td>
+            <td>Estanco</td>
+            <td>4</td>
             <td>25</td>
-            <td>$2.90</td>
+            <td>3</td>
+            <td>1</td>
+            <td>2</td>
+            <td>9</td>
+            <td>9</td>
+        </tr>
+        <tr>
+            <td>7</td>
+            <td>Hover</td>
+            <td>1</td>
             <td>25</td>
-            <td>$2.90</td>
+            <td>7</td>
             <td>25</td>
-            <td>$2.90</td>
-
+            <td>0</td>
+            <td>0</td>
+            <td>0</td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td>Dupont</td>
+            <td>0</td>
+            <td>25</td>
+            <td>8</td>
+            <td>2</td>
+            <td>1</td>
+            <td>8</td>
+            <td>2</td>
         </tr>
         </tbody>
     </table>
