--- a/index.html
+++ b/index.html
@@ -134,10 +134,10 @@
             </div>
             <div class="pendantMatch-bandeau-score">
                 <span id="pendantMatch-bandeau-score--left">0</span>
-                <span>&nbsp;:&nbsp;</span>
+                <span class="pendantMatch-bandeau-score--separator">&nbsp;:&nbsp;</span>
                 <span id="pendantMatch-bandeau-score--right">0</span>
-                <img class="pendantMatch-bandeau-image pendantMatch-bandeau-image--left" src="img/iconmonstr-basketball-1.svg" alt="">
-                <img class="pendantMatch-bandeau-image pendantMatch-bandeau-image--right" src="img/iconmonstr-basketball-1.svg" alt="">
+                <img class="pendantMatch-bandeau-image pendantMatch-bandeau-image--left" src="img/LOGO1.svg" alt="">
+                <img class="pendantMatch-bandeau-image pendantMatch-bandeau-image--right" src="img/LOGO2.svg" alt="">
             </div>
 
         </div>
@@ -174,7 +174,7 @@
                     <div data-score="3" id="score-right--3" class="pendantMatch-actions-boutons pendantMatch-actions-boutons--right"><span class="pendantMatch-actions-valeur">3</span></div>
                     <div data-score="2" id="score-right--2" class="pendantMatch-actions-boutons pendantMatch-actions-boutons--right"><span class="pendantMatch-actions-valeur">2</span></div>
                     <div data-score="1" id="score-right--1" class="pendantMatch-actions-boutons pendantMatch-actions-boutons--right"><span class="pendantMatch-actions-valeur">1</span></div>
-                    <div data-score="-1" id="score-right--0" class="pendantMatch-actions-boutons pendantMatch-actions-boutons--right"><span class="pendantMatch-actions-valeur">1-</span></div>
+                    <div data-score="-1" id="score-right--0" class="pendantMatch-actions-boutons pendantMatch-actions-boutons--right"><span class="pendantMatch-actions-valeur">-1</span></div>
                 </div>
             </div>
             <div id="pendantMatch-actions-startButton"><span>START</span></div>
